# mandelbrot

./: CMakeLists.txt
src/: CMakeLists.txt  color_conversion.hpp  get_number_of_escape_iterations.cpp  get_number_of_escape_iterations.hpp  include.hpp  main.cpp  render_frame.cpp
